# karya-de

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  SECURITY.md  SIKÇA_SORULAN_SORULAR.md  SPONSORLUK.md  auto-install-arch.sh  install-nosystemd.sh  install-ubuntu.sh  install.sh  karya-de.md  sorular.md  sponsorluk.md
.github/workflows/: build.yml
calamares/karya-welcome/: main.py  module.desc
debian/: changelog  control  copyright  karya-de.postinst  karya-de.postrm  rules
docs/: ARCHITECTURE.md  runit-setup.md
hardware/profiles/: amd.conf  intel.conf  nvidia.conf
hardware/scripts/: build-kwin.sh  detect-hardware.sh  install-drivers.sh  karya-harden.sh
hardware/speed/: README.md  speed.sh
iso/releng/: packages.x86_64  pacman.conf  profiledef.sh
kernel/: config-6.17-x86_64  config-6.17-x86_64-hardened
kernel/hardening/: 90-karya-hardening.conf  90-karya-kernel-params.conf
kernel/modules/: Makefile  karya-security.c
kwin-effects/karya-glassmorphism/: CMakeLists.txt  karyaglassmorphism.cpp
kwin-effects/scripts/: karya-glassmorphism.js
patches/kwin/: 01-karya-tiling.patch
scripts/: build.sh  setup.sh
sddm-theme/karya-sddm/: Main.qml  metadata.desktop
security/: README.md
security/apparmor/: install.sh  karya-drivers  karya-oobe  karya-speed  karya-widgets  kwin-karya
security/selinux/: karya.te
security/sentinel/: README.md  karya-sentinel.conf  karya-sentinel.service  karya-sentinel.sh
security/sysctl/: 99-karya-security.conf
shell/layouts/: karya-dock.layout.lua  (+1 more)
vm/: install-vm.py  run-vm.sh
(+44 files in other folders)
